--- a/index.html
+++ b/index.html
@@ -4,8 +4,265 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Defolio</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header__logo">
+        <div class="header__logo__alphabet">J</div>
+        <div class="header__logo__text">jason stroff</div>
+      </div>
+      <div class="header__logo-media">
+        <div class="header__logo-media__item">
+          <svg width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              fill-rule="evenodd"
+              d="M11.999 1C5.926 1 1 5.925 1 12c0 4.86 3.152 8.983 7.523 10.437c.55.102.75-.238.75-.53c0-.26-.009-.952-.014-1.87c-3.06.664-3.706-1.475-3.706-1.475c-.5-1.27-1.221-1.61-1.221-1.61c-.999-.681.075-.668.075-.668c1.105.078 1.685 1.134 1.685 1.134c.981 1.68 2.575 1.195 3.202.914c.1-.71.384-1.195.698-1.47c-2.442-.278-5.01-1.222-5.01-5.437c0-1.2.428-2.183 1.132-2.952c-.114-.278-.491-1.397.108-2.91c0 0 .923-.297 3.025 1.127A10.536 10.536 0 0 1 12 6.32a10.49 10.49 0 0 1 2.754.37c2.1-1.424 3.022-1.128 3.022-1.128c.6 1.514.223 2.633.11 2.911c.705.769 1.13 1.751 1.13 2.952c0 4.226-2.572 5.156-5.022 5.428c.395.34.747 1.01.747 2.037c0 1.47-.014 2.657-.014 3.017c0 .295.199.637.756.53C19.851 20.979 23 16.859 23 12c0-6.075-4.926-11-11.001-11"
+            />
+          </svg>
+        </div>
+        <div class="header__logo-media__item">
+          <svg width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              fill-rule="evenodd"
+              d="M22.037 22h-4.152v-6.496c0-1.55-.026-3.542-2.157-3.542c-2.16 0-2.49 1.688-2.49 3.43V22H9.09V8.64h3.98v1.827h.058c.553-1.05 1.908-2.158 3.928-2.158c4.204 0 4.98 2.766 4.98 6.364V22ZM4.409 6.816A2.407 2.407 0 0 1 2 4.407a2.408 2.408 0 1 1 2.41 2.408ZM6.486 22H2.33V8.64h4.156V22Z"
+            />
+          </svg>
+        </div>
+        <div class="header__logo-media__item">
+          <svg width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="m15.725 0l-1.72 1.277l6.39 8.588l1.716-1.277L15.725 0zm-3.94 3.418l-1.369 1.644l8.225 6.85l1.369-1.644l-8.225-6.85zm-3.15 4.465l-.905 1.94l9.702 4.517l.904-1.94l-9.701-4.517zm-1.85 4.86l-.44 2.093l10.473 2.201l.44-2.092l-10.473-2.203zM1.89 15.47V24h19.19v-8.53h-2.133v6.397H4.021v-6.396H1.89zm4.265 2.133v2.13h10.66v-2.13H6.154Z"
+            />
+          </svg>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="avatar-section">
+          <div class="avater-section__img">
+            <img
+              src="https://www.designstub.com/demos/defolio/assets/images/profile-image.jpg"
+              alt=""
+            />
+          </div>
+          <div class="avater-section__text">
+            <div class="avater-section__text__minititle">hi there</div>
+            <div class="avater-section__text__title">
+              I’m Jason Stroff UI/UX DESIGNER + DEVELOPER based in Florida.
+            </div>
+            <div class="avater-section__text__parameter">
+              <div class="avater-section__text__parameter__item">
+                <div class="avater-section__text__parameter__item__logo">
+                  6+
+                </div>
+                <div class="avater-section__text__parameter__item__text">
+                  Experence
+                </div>
+              </div>
+              <div class="avater-section__text__parameter__item">
+                <div class="avater-section__text__parameter__item__logo">
+                  89
+                </div>
+                <div class="avater-section__text__parameter__item__text">
+                  Projects
+                </div>
+              </div>
+              <div class="avater-section__text__parameter__item">
+                <div class="avater-section__text__parameter__item__logo">
+                  52
+                </div>
+                <div class="avater-section__text__parameter__item__text">
+                  Happy Clients
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="about-section">
+          <div class="title">about me</div>
+          <div class="about-section__content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+            interdum ante a porta blandit. Quisque velit tortor, ultricies in
+            quam ut, luctus convallis metus. Nunc vitae felis rutrum, mattis
+            justo quis, bibendum tellus. Integer bibendum eget dolor nec
+            venenatis. Aliquam erat volutpat. Etiam et est vitae turpis accumsan
+            vulputate. Curabitur et vehicula nisl, eu congue dolor. Vivamus nec
+            hendrerit mi Nulla consequat tempor.
+          </div>
+          <div class="about-section__download">
+            <a class="button" href="#">download resume</a>
+          </div>
+        </div>
+        <div class="skillnode-section">
+          <div class="skillnode-section__coreskill">
+            <div class="title">core skills</div>
+            <div class="skillnode-section__coreskill__node">
+              <div class="node">Javascript</div>
+              <div class="node">Node.js</div>
+              <div class="node">Express.js</div>
+              <div class="node">MongoDB</div>
+              <div class="node">Vue.js</div>
+              <div class="node">React</div>
+              <div class="node">Sequelize</div>
+              <div class="node">Github</div>
+              <div class="node">HTML</div>
+            </div>
+          </div>
+          <div class="skillnode-section__otherskill">
+            <div class="title">other skills</div>
+            <div class="skillnode-section__otherskill__node">
+              <div class="node">Storyblok</div>
+              <div class="node">PWAs</div>
+              <div class="node">Responsive Web Design</div>
+              <div class="node">React</div>
+              <div class="node">Vuetify</div>
+            </div>
+          </div>
+        </div>
+        <div class="work-experence">
+          <div class="title">work experence</div>
+          <div class="work-experence__content">
+            <div class="work-experence__content__left">
+              <div class="work-experence__content__left__title">
+                2019 - Present
+              </div>
+              <div class="work-experence__content__left__company">
+                Matrix Media Inc
+              </div>
+              <div class="work-experence__content__left__level">
+                Full Stack developer
+              </div>
+              <div class="work-experence__content__left__content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                  quis sem maximus, ornare metus ut, congue enim. Sed fermentum.
+                </p>
+                <ul>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis quis sem maximus, ornare metus ut.
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="work-experence__content__right">
+              <div class="work-experence__content__right__title">
+                2018 - 2019
+              </div>
+              <div class="work-experence__content__right__company">Lexind</div>
+              <div class="work-experence__content__right__level">
+                Senior app developer
+              </div>
+              <div class="work-experence__content__right__content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                  quis sem maximus, ornare metus ut, congue enim. Sed fermentum.
+                </p>
+                <ul>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis quis sem maximus, ornare metus ut.
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </li>
+                  <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Duis quis sem maximus, ornare metus ut.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="latest-works">
+          <div class="title">latest works</div>
+          <div class="latest-works__component">
+            <div class="latest-works__component__item">
+              <div class="latest-works__component__text">
+                <div class="latest-works__component__text__title">
+                  Tripy mobile app
+                </div>
+                <div class="latest-works__component__text__content">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                  quis sem maximus, ornare metus ut, congue enim. Sed fermentum
+                  nulla tellus, quis efficitur mauris tristique efficitur.
+                  Aliquam rhoncus sem sed ullamcorper venenatis. Aenean
+                  malesuada eu orci non sodales.
+                </div>
+                <div class="button">details</div>
+              </div>
+              <div class="latest-works__component__img">
+                <img
+                  src="https://www.designstub.com/demos/defolio/assets/images/work-1.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="latest-works__component__item">
+              <div class="latest-works__component__text">
+                <div class="latest-works__component__text__title">
+                  Hello mobile app
+                </div>
+                <div class="latest-works__component__text__content">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                  quis sem maximus, ornare metus ut, congue enim. Sed fermentum
+                  nulla tellus, quis efficitur mauris tristique efficitur.
+                  Aliquam rhoncus sem sed ullamcorper venenatis. Aenean
+                  malesuada eu orci non sodales.
+                </div>
+                <div class="button">details</div>
+              </div>
+              <div class="latest-works__component__img">
+                <img
+                  src="https://www.designstub.com/demos/defolio/assets/images/work-2.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="latest-works__component__item">
+              <div class="latest-works__component__text">
+                <div class="latest-works__component__text__title">
+                  Cute cookies app
+                </div>
+                <div class="latest-works__component__text__content">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                  quis sem maximus, ornare metus ut, congue enim. Sed fermentum
+                  nulla tellus, quis efficitur mauris tristique efficitur.
+                  Aliquam rhoncus sem sed ullamcorper venenatis. Aenean
+                  malesuada eu orci non sodales.
+                </div>
+                <div class="button">details</div>
+              </div>
+              <div class="latest-works__component__img">
+                <img
+                  src="https://www.designstub.com/demos/defolio/assets/images/work-3.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer__title1">stay in touch</div>
+      <div class="footer__title2">Ready to talk?</div>
+      <div class="footer__title3">Feel free to contact us</div>
+      <div class="footer__button">Let's talk</div>
+      <div class="footer__source">
+        2022 All rights reserved. Free minimal bootstrap template by DANGNHA.
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.2/dist/iconify-icon.min.js"></script>
+  </body>
 </html>
